cloud/minecraft/amber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amber
  namespace: minecraft
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft
      world: amber
  template:
    metadata:
      labels:
        app: minecraft
        world: amber
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      nodeName: elrond
      containers:
        - name: amber
          image: ghcr.io/ttys0/spigot-arm64:1.18.1
          workingDir: "/minecraft/amber"
          ports:
            - containerPort: 25565
            - containerPort: 8123
            - containerPort: 25575
          volumeMounts:
            - name: amber
              mountPath: /minecraft/amber
      volumes:
        - name: amber
          persistentVolumeClaim:
            claimName: amber
---
apiVersion: v1
kind: Service
metadata:
  name: amber
  namespace: minecraft
  labels:
    app: minecraft
    world: amber
spec:
  ports:
    - name: server
      port: 25565
      targetPort: 25565
    - name: map
      port: 8123
      targetPort: 8123
    - name: rcon
      port: 25575
      targetPort: 25575
  selector:
    app: minecraft
    world: amber
