cloud/minecraft/bungeecord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bungeecord
  namespace: minecraft
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bungeecord
  template:
    metadata:
      labels:
        app: bungeecord
    spec:
      nodeName: elrond
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - imagePullPolicy: IfNotPresent
          name: bungeecord
          image: ghcr.io/ttys0/bungeecord:1616
          workingDir: "/minecraft/bungeecord"
          ports:
            - containerPort: 25577
          volumeMounts:
            - name: bungeecord
              mountPath: "/minecraft"
      volumes:
        - name: bungeecord
          persistentVolumeClaim:
            claimName: bungeecord
---
apiVersion: v1
kind: Service
metadata:
  name: bungeecord
  namespace: minecraft
  labels:
    app: bungeecord
spec:
  ports:
    - name: server
      port: 25565
      targetPort: 25577
  selector:
    app: bungeecord
