cloud/minecraft/rebma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rebma
  namespace: minecraft
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: minecraft
      world: rebma
  template:
    metadata:
      labels:
        app: minecraft
        world: rebma
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      nodeName: elrond
      containers:
        - name: rebma
          image: ghcr.io/ttys0/spigot:1.18.1
          workingDir: "/minecraft/rebma"
          ports:
            - containerPort: 25565
            - containerPort: 8123
            - containerPort: 25575
          volumeMounts:
            - name: rebma
              mountPath: /minecraft/rebma
      volumes:
        - name: rebma
          persistentVolumeClaim:
            claimName: rebma
---
apiVersion: v1
kind: Service
metadata:
  name: rebma
  namespace: minecraft
  labels:
    app: minecraft
    world: rebma
spec:
  ports:
    - name: server
      port: 25565
      targetPort: 25565
    - name: map
      port: 8123
      targetPort: 8123
    - name: rcon
      port: 25575
      targetPort: 25575
  selector:
    app: minecraft
    world: rebma
