cloud/minecraft/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft
  namespace: minecraft
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: minecraft.ttys0.net
      http:
        paths:
          - backend:
              service:
                name: bungeecord
                port:
                  number: 25565
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: map-amber
  namespace: minecraft
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: minecraft-amber.ttys0.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amber
                port:
                  number: 8123
  tls:
    - hosts:
        - minecraft-amber.ttys0.net
      secretName: minecraft-amber-ttys0-net-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: map-rebma
  namespace: minecraft
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: minecraft-rebma.ttys0.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rebma
                port:
                  number: 8123
  tls:
    - hosts:
        - minecraft-rebma.ttys0.net
      secretName: minecraft-rebma-ttys0-net-cert
